SUBDIRS		= Answerer \
		BNConverter \
		BNCreator \
		BNEvaluator \
		BNFunc \
		BNServer \
		BNTester \
		BNTruster \
		BNUnraveler \
		BNWeaver \
		BNWrangler \
		Cliquer \
		Clusterer \
		Clusters2Dab \
		Combiner \
		Contexter \
		DChecker \
		DSLConverter \
		Dab2Dad \
		Dat2Dab \
		Dat2Graph \
		Data2Bnt \
		Data2DB \
		Data2Features \
		Data2Sql \
		Data2Svm \
		DataDumper \
		Distancer \
		Edges2Posteriors \
		Explainer \
		Funcaeologist \
		Funcifier \
		Funcographer \
		Hubber \
		KNNImputer \
		MCluster \
		MEFIT \
		MIer \
		Normalizer \
		OntoShell \
		Orthologer \
		Overlapper \
		Randomizer \
		SVMer \
		Seqs2Ngrams \
		Txt2Bin
